fixed title spacing

--- a/style.css
+++ b/style.css
@@ -93,7 +93,8 @@ img {
 }
 
 nav {
-    height: 5rem;
+    min-height: 5rem;
+    max-height: 5rem;
     display: flex;
     align-items: center;
     border-bottom: 0.5px solid var(--secondary-background);
